Fixed input on iOS

--- a/src/stylesheets/core/_forms.sass
+++ b/src/stylesheets/core/_forms.sass
@@ -7,6 +7,7 @@ input
   border: none
   background-color: transparent
   -webkit-appearance: none
+  border-radius: 0
 
 button,
 input
